changes in packges json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://juanotavalomaigua.github.io/itexzaReactJs/",
+  "homepage": "https://juanotavalomaigua.github.io/itexzaReactJs",
   "name": "itexza",
   "version": "0.1.0",
   "private": true,
