is already deployed in github pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://juanotavalomaigua.github.io/itexzaReactJs/",
   "name": "itexza",
+  "homepage": "https://juanotavalomaigua.github.io/itexzaReactJs/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,11 +14,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
